--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,6 @@
 name: release
 
-on: workflow_dispatch:
+on: [workflow_dispatch]
 
 jobs:
   release:
@@ -13,6 +13,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
       - name: release
-        run: npx semantic-release  
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
